        - "item.cold_sweat.soulfire_lamp" (The name of the Soulfire Lamp item)
    - Fixed a bug that would sometimes cause extreme lag when searching for temperature-affecting blocks
    - Removed some defunct recipes that would throw errors in server consoles

2.1 Beta 2
- Sleeping in a bed now warms you up/cools you down (must sleep through the night)
- Added new sounds for when the player is freezing
- Using the ingame config menu on a server now changes the server's configs if the player has OP permission level 2 or higher
- Fixed Icebox and Soul Campfire not cooling the area around them
- Fixed an issue that caused the player's temperature to not be saved properly upon leaving the world
- Fixed crash with Waterskins in the player's hotbar
- Fixed bug that prevented some modded worn items from showing on the player's model
- New textures for Boiler and Icebox fuel gauges

- Technical Changes:
    - Reduced the potential performance impact of wearing leather armor
        - This probably won't affect performance much, but it's worth noting (it all adds up, you know!)
    - Added new methods for handling TempModifiers:
        - PlayerTemp.hasModifier():
            - Returns true if the player has a modifier of the given type
        - PlayerTemp.forEachModifier():
            - Calls the given function for each modifier of the given type
    - Changed how PlayerTemp.removeModifier() works
        - Instead of removing all modifiers of the given class, it takes a predicate which determines which modifiers to remove
    - Added new method for TempModifierEvent.Add: setModifier()
        - Replaces the modifier that would have been added with the one given
    - Renamed LeatherTempModifier to InsulationTempModifier
    - Added new event for compat mod developers to hook into:
        - TempModifierEvent.Tick
            - Fired when a TempModifier's value is called
            - Has two phases:
                - Pre: Called before getValue() is called