@@ -1,18 +1,17 @@
 package net.momostudios.coldsweat.common.temperature.modifier;
 
 import net.minecraft.entity.player.PlayerEntity;
-import net.momostudios.coldsweat.ColdSweat;
+import net.minecraft.particles.ParticleTypes;
 import net.momostudios.coldsweat.common.temperature.Temperature;
 import net.momostudios.coldsweat.core.util.MathHelperCS;
-import net.momostudios.coldsweat.core.util.PlayerTemp;
 import net.momostudios.coldsweat.core.util.Units;
-
-import java.util.ArrayList;
-import java.util.List;
 
 public class WaterTempModifier extends TempModifier
 {
-    public WaterTempModifier() {}
+    public WaterTempModifier()
+    {
+        addArgument("strength", 1);
+    }
 
     public WaterTempModifier(double strength)
     {
@@ -22,9 +21,21 @@ public class WaterTempModifier extends TempModifier
     @Override
     public double getValue(Temperature temp, PlayerEntity player)
     {
-        setArgument("strength", MathHelperCS.clamp((double) getArgument("strength") + (player.isInWater() ? 0.5 : -0.04), 0, 10));
+        double strength = (double) getArgument("strength");
+        setArgument("strength", MathHelperCS.clamp(strength + (player.isInWater() ? 0.3 : -0.02), 0, 10));
 
-        return temp.get() + MathHelperCS.convertUnits(-(double) getArgument("strength"), Units.F, Units.MC, false);
+        if (!player.isInWater() && strength > 0)
+        {
+            if (Math.random() < strength / 15)
+            {
+                double randX = player.getWidth() * (Math.random() - 0.5);
+                double randY = player.getHeight() * Math.random();
+                double randZ = player.getWidth() * (Math.random() - 0.5);
+                player.world.addParticle(ParticleTypes.FALLING_WATER, player.getPosX() + randX, player.getPosY() + randY, player.getPosZ() + randZ, 0, 0, 0);
+            }
+        }
+
+        return temp.get() + MathHelperCS.convertUnits(-strength, Units.F, Units.MC, false);
     }
 
     @Override
