@@ -5,32 +5,60 @@ import net.minecraft.network.PacketBuffer;
 import net.minecraftforge.fml.common.ObfuscationReflectionHelper;
 import net.minecraftforge.fml.network.NetworkEvent;
 import net.momostudios.coldsweat.config.ConfigCache;
+import net.momostudios.coldsweat.config.WorldTemperatureConfig;
 import net.momostudios.coldsweat.core.network.ColdSweatPacketHandler;
 
 import java.lang.reflect.Constructor;
 import java.lang.reflect.Method;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 import java.util.function.Supplier;
 
 public class ClientConfigRecieveMessage
 {
     ConfigCache configCache;
     boolean onJoin;
+    Map<String, List<? extends List<String>>> worldTempConfig = new HashMap<>();
 
-    public ClientConfigRecieveMessage(ConfigCache configCache, boolean onJoin) {
+    public ClientConfigRecieveMessage(ConfigCache configCache, boolean onJoin, Map<String, List<? extends List<String>>> worldTempConfig)
+    {
         this.configCache = configCache;
         this.onJoin = onJoin;
+        if (onJoin)
+        {
+            this.worldTempConfig = worldTempConfig;
+        }
     }
 
     public static void encode(ClientConfigRecieveMessage message, PacketBuffer buffer)
     {
         buffer.writeBoolean(message.onJoin);
         ColdSweatPacketHandler.writeConfigCacheToBuffer(message.configCache, buffer);
+        if (message.onJoin)
+        {
+            // WorldTempConfig
+            message.worldTempConfig.forEach((key, value) ->
+            {
+                buffer.writeCompoundTag(ColdSweatPacketHandler.writeListOfLists(message.worldTempConfig.get(key)));
+            });
+        }
     }
 
     public static ClientConfigRecieveMessage decode(PacketBuffer buffer)
     {
         boolean onJoin = buffer.readBoolean();
-        return new ClientConfigRecieveMessage(ColdSweatPacketHandler.readConfigCacheFromBuffer(buffer), onJoin);
+        ConfigCache configCache = ColdSweatPacketHandler.readConfigCacheFromBuffer(buffer);
+        Map<String, List<? extends List<String>>> worldTempConfig = new HashMap<>();
+        if (onJoin)
+        {
+            worldTempConfig.put("biomeOffsets", ColdSweatPacketHandler.getListOfLists(buffer.readCompoundTag()));
+            worldTempConfig.put("dimensionOffsets", ColdSweatPacketHandler.getListOfLists(buffer.readCompoundTag()));
+            worldTempConfig.put("biomeTemperatures", ColdSweatPacketHandler.getListOfLists(buffer.readCompoundTag()));
+            worldTempConfig.put("dimensionTemperatures", ColdSweatPacketHandler.getListOfLists(buffer.readCompoundTag()));
+        }
+
+        return new ClientConfigRecieveMessage(configCache, onJoin, worldTempConfig);
     }
 
     public static void handle(ClientConfigRecieveMessage message, Supplier<NetworkEvent.Context> contextSupplier)
@@ -41,6 +69,10 @@ public class ClientConfigRecieveMessage
             if (message.onJoin)
             {
                 ConfigCache.setInstance(message.configCache);
+                WorldTemperatureConfig.INSTANCE.setBiomeOffsets(message.worldTempConfig.get("biomeOffsets"));
+                WorldTemperatureConfig.INSTANCE.setDimensionOffsets(message.worldTempConfig.get("dimensionOffsets"));
+                WorldTemperatureConfig.INSTANCE.setBiomeTemperatures(message.worldTempConfig.get("biomeTemperatures"));
+                WorldTemperatureConfig.INSTANCE.setDimensionTemperatures(message.worldTempConfig.get("dimensionTemperatures"));
             }
             else
             {
